this compiles.. lets not have broken master. all new features should go on a separate branch and then merged back into here

--- a/Phase 2/Makefile
+++ b/Phase 2/Makefile
@@ -1,5 +1,5 @@
 all:
-	g++ main.cpp login.cpp logout.cpp create.cpp delete.cpp sell.cpp buy.cpp refund.cpp add_credit.cpp
+	g++ main.cpp login.cpp logout.cpp create.cpp delete.cpp sell.cpp buy.cpp refund.cpp add_credit.cpp daily_transaction.cpp
 
 a.out : main.cpp
 	g++ main.cpp
