--- a/Phase 2/Makefile
+++ b/Phase 2/Makefile
@@ -1,5 +1,5 @@
 all:
-	g++ main.cpp login.cpp logout.cpp create.cpp delete.cpp sell.cpp buy.cpp refund.cpp add_credit.cpp daily_transaction.cpp
+	g++ -std=c++11 main.cpp login.cpp logout.cpp create.cpp delete.cpp sell.cpp buy.cpp refund.cpp add_credit.cpp daily_transaction.cpp data_store.cpp
 
 a.out : main.cpp
 	g++ main.cpp
