added user file

--- a/front_end/Makefile
+++ b/front_end/Makefile
@@ -1,5 +1,5 @@
 all:
-	g++ -Wall main.cpp login.cpp logout.cpp create.cpp delete.cpp sell.cpp buy.cpp refund.cpp add_credit.cpp daily_transaction.cpp
+	g++ -Wall main.cpp login.cpp logout.cpp create.cpp delete.cpp sell.cpp buy.cpp refund.cpp add_credit.cpp daily_transaction.cpp user_file.cpp
 
 a.out : main.cpp
 	g++ main.cpp
