updated the makefile

--- a/back_end/Makefile
+++ b/back_end/Makefile
@@ -1,4 +1,6 @@
-all: backEnd.class
+all: backEnd.class userAccount.class
 
 backEnd.class: backEnd.java
 	javac backEnd.java
+userAccount.class : userAccount.java
+	javac userAccount.java
