Added prototype of Event class, and modified makefile thusly #5

--- a/back_end/Makefile
+++ b/back_end/Makefile
@@ -1,6 +1,8 @@
-all: BackEnd.class UserAccount.class
+all: BackEnd.class UserAccount.class Event.class
 
 BackEnd.class: BackEnd.java
 	javac BackEnd.java
 UserAccount.class: UserAccount.java
 	javac UserAccount.java
+Event.class: Event.java
+	javac Event.java
