Added Transaction class

--- a/back_end/Makefile
+++ b/back_end/Makefile
@@ -1,6 +1,8 @@
-all: BackEnd.class UserAccount.class
+all: BackEnd.class UserAccount.class Transaction.class
 
 BackEnd.class: BackEnd.java
 	javac BackEnd.java
 UserAccount.class: UserAccount.java
 	javac UserAccount.java
+Transaction.class: Transaction.java
+	javac Transaction.java
