Added Event_holder, and modified the make file for its build instructions

--- a/back_end/Makefile
+++ b/back_end/Makefile
@@ -1,4 +1,4 @@
-all: BackEnd.class UserAccount.class Event.class Transaction.class
+all: BackEnd.class UserAccount.class Event.class Transaction.class Event_Holder.class
 
 BackEnd.class: BackEnd.java
 	javac BackEnd.java
@@ -8,3 +8,7 @@ Transaction.class: Transaction.java
 	javac Transaction.java
 Event.class: Event.java
 	javac Event.java
+Event_Holder.class: Event_Holder.java
+	javac Event_Holder.java
+clean:
+	rm *.class
